--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="row-1">
             <div class="square">
-                <img src="images/delete.png" onclick="openX()" id="imgx">
+                <img src="images/delete.png" onclick="openX('12312423','kfodaslmdls;')" id="imgx">
                 <!-- <img src="images/o.png" onclick="openO()" id="imgx"> -->
             </div>
             <div class="square">
