--- a/index.html
+++ b/index.html
@@ -13,44 +13,45 @@
 
     <div class="container">
         <div class="row-1">
-            <div class="square">
-                <img src="images/delete.png" onclick="openX('12312423','kfodaslmdls;')" id="imgx">
+
+            <div class="square" onclick="openX(1)">
+                <img src="images/delete.png" id="imgx1" class="displaynone">
                 <!-- <img src="images/o.png" onclick="openO()" id="imgx"> -->
             </div>
-            <div class="square">
-                <img src="images/delete.png" onclick="openX()" id="imgx">
+            <div class="square" onclick="openX(2)">
+                <img src="images/delete.png" id="imgx2" class="displaynone">
                 <!-- <img src="images/o.png" onclick="openO()" id="imgx"> -->
             </div>
-            <div class="square">
-                <img src="images/delete.png" onclick="openX()" id="imgx">
+            <div class="square" onclick="openX(3)">
+                <img src="images/delete.png" id="imgx3" class="displaynone">
                 <!-- <img src="images/o.png" onclick="openO()" id="imgx"> -->
             </div>
         </div>
         <div class="row-2">
-            <div class="square">
-                <img src="images/delete.png" onclick="openX()" id="imgx">
+            <div class="square" onclick="openX(4)">
+                <img src="images/delete.png" id="imgx4" class="displaynone">
                 <!-- <img src="images/o.png" onclick="openO()" id="imgx"> -->
             </div>
-            <div class="square">
-                <img src="images/delete.png" onclick="openX()" id="imgx">
+            <div class="square" onclick="openX(5)">
+                <img src="images/delete.png" id="imgx5" class="displaynone">
                 <!-- <img src="images/o.png" onclick="openO()" id="imgx"> -->
             </div>
-            <div class="square">
-                <img src="images/delete.png" onclick="openX()" id="imgx">
+            <div class="square" onclick="openX(6)">
+                <img src="images/delete.png" id="imgx6" class="displaynone">
                 <!-- <img src="images/o.png" onclick="openO()" id="imgx"> -->
             </div>
         </div>
         <div class="row-3">
-            <div class="square">
-                <img src="images/delete.png" onclick="openX()" id="imgx">
+            <div class="square" onclick="openX(7)">
+                <img src="images/delete.png" id="imgx7" class="displaynone">
                 <!-- <img src="images/o.png" onclick="openO()" id="imgx"> -->
             </div>
-            <div class="square">
-                <img src="images/delete.png" onclick="openX()" id="imgx">
+            <div class="square" onclick="openX(8)">
+                <img src="images/delete.png" id="imgx8" class="displaynone">
                 <!-- <img src="images/o.png" onclick="openO()" id="imgx"> -->
             </div>
-            <div class="square">
-                <img src="images/delete.png" onclick="openX()" id="imgx">
+            <div class="square" onclick="openX(9)">
+                <img src="images/delete.png" id="imgx9" class="displaynone">
                 <!-- <img src="images/o.png" onclick="opeenO()" id="imgx"> -->
             </div>
         </div>
